Get the onchange event correct

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head></head>
   <body>
     <h1>Lucia</h1>
-    <input type="file" id="upload1" onchange="onChange"/>
+    <input type="file" id="upload1" onchange="doIt()"/>
     <script src="gifshot.js"></script>
     <script>
-      function onChange() {
-        console.log('onChange');
+      function doIt() {
+        console.log('doIt');
       }
     </script>
   </body>
